Bug 181765 - Dolphin doesn't display folder names with '&' right in tab bar
Summary: Dolphin doesn't display folder names with '&' right in tab bar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-24 15:41 UTC by Lasse Liehu
Modified: 2009-01-31 12:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to fix it (622 bytes, patch)
2009-01-26 22:21 UTC, Frank Reininghaus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2009-01-24 15:41:13 UTC
Version:           1.1.80 (using 4.1.96 (KDE 4.1.96 (KDE 4.2 RC1)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.27-sabayon

Steps to reproduce:
1. open a new tab to make the tab bar visible
2. enter to a directory whose name contains '&', for example "Foo&Bar"
3. see how the name in the tab bar is "FooBar", with 'B' possibly underlined

Note: It's the same with "Foo & Bar". This doesn't occur only when a non-space character follows the '&'.
Comment 1 Frank Reininghaus 2009-01-26 22:21:26 UTC
Thanks for the bug report. I can confirm the issue in trunk rev. 917091. The problem is that QTabBar::setTabText() interprets the "&" in the directory name as an indicator for a keyboard shortcut. According to http://doc.trolltech.com/4.4/qtabwidget.html#setTabText , this can be avoided by passing "&&" instead of "&".
Comment 2 Frank Reininghaus 2009-01-26 22:21:59 UTC
Created attachment 30641 [details]
Patch to fix it
Comment 3 Peter Penz 2009-01-29 19:58:49 UTC
Thanks Frank for the patch, looks fine! I'll do a test and will commit the patch during the next week...
Comment 4 Peter Penz 2009-01-31 12:19:02 UTC
SVN commit 919023 by ppenz:

Backport of SVN commit 919021: Display correct folder names in tabs, if they contain a '&' character. Thanks to Frank Reininghaus for the patch!

CCBUG: 181765

 M  +4 -0      dolphinmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=919023
Comment 5 Peter Penz 2009-01-31 12:19:03 UTC
SVN commit 919021 by ppenz:

Display correct folder names in tabs, if they contain a '&' character. Thanks to Frank Reininghaus for the patch!

BUG: 181765

 M  +4 -0      dolphinmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=919021