Display correct folder names in tabs, if they contain a '&' character. Thanks to Frank Reininghaus for the patch!

BUG: 181765

svn path=/trunk/KDE/kdebase/apps/; revision=919021